--- a/trunk/tools/win32/hsed3/Poppad.rc
+++ b/trunk/tools/win32/hsed3/Poppad.rc
@@ -105,7 +105,6 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "起動オプション(&O)...",              IDM_CMDOPT
         MENUITEM "Debugウインドゥ表示(&D)",            IDM_DEBUG
-        MENUITEM "HSP拡張マクロを使用する(&M)",           IDM_HSPEXTMACRO
     END
     POPUP "ツール(&T)"
     BEGIN
@@ -114,7 +113,7 @@ BEGIN
         MENUITEM "EXEファイル作成(&M)",               IDM_MKEXE1
         MENUITEM "スクリーンセーバー作成(&S)",             IDM_MKEXE2
         MENUITEM "ソースフォルダを開く(&O)...",           IDM_OPEN_SRCFOLDER
-        MENUITEM "サンプルスクリプト参照(&F)...",          IDM_START_RUNTIMEMAN
+        MENUITEM "HSPアシスタント起動(&F)...",          IDM_START_RUNTIMEMAN
     END
     POPUP "ヘルプ(&H)"
     BEGIN
@@ -183,8 +182,8 @@ FONT 9, "ＭＳ Ｐゴシック", 0, 0, 0x0
 BEGIN
     CTEXT           "HSP script editor",IDC_STATIC,41,12,67,8
     ICON            "OniPad",IDC_STATIC,8,8,20,20
-    CTEXT           "For Windows98/Me/NT/2K/XP version 3.1",IDC_STATIC,0,29,159,8
-    CTEXT           "Copyright 1997-2007 onion software",IDC_STATIC,0,37,159,8
+    CTEXT           "For Windows9x/2K/XP/Vista version 3.2",IDC_STATIC,0,29,159,8
+    CTEXT           "Copyright 1997-2009 onion software",IDC_STATIC,0,37,159,8
     DEFPUSHBUTTON   "OK",IDOK,64,75,32,14,WS_GROUP
     CTEXT           "http://hsp.tv/",IDC_STATIC,0,59,159,8
     LTEXT           "Information available at:",IDC_STATIC,46,51,71,8
@@ -549,7 +548,7 @@ BEGIN
     IDM_HSPSYM              "予約済みキーワード一覧を表示"
     IDM_AUTOMAKE            "現在のソースから実行ファイル作成"
     IDM_HSPCLMODE           "コンソールアプリケーション作成モードON/OFF"
-    IDM_START_RUNTIMEMAN    "ランタイムマネージャを起動"
+    IDM_START_RUNTIMEMAN    "HSPアシスタントを起動"
     IDM_OPEN_SRCFOLDER      "スクリプトのあるフォルダを開く"
     IDM_STARTDIR            "起動時のディレクトリを設定する"
 END
